fix: broken IconSet styling on narrow screens
improve page padding at /volunteer and /about.

Enable wrapping of the IconSet when it's too long for its container.

--- a/src/components/Blocks/IconSet/IconSet.module.scss
+++ b/src/components/Blocks/IconSet/IconSet.module.scss
@@ -4,5 +4,6 @@
 
 .iconWrapper {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
