--- a/styles/pages/Volunteer.module.scss
+++ b/styles/pages/Volunteer.module.scss
@@ -1,5 +1,5 @@
 .pageWrapper {
-    margin: 200px 206px 0 206px;
+    margin: 200px 15vw 0 15vw;
 
     @media screen and (max-width: 600px) {
         margin: 25vh 10vw 0 10vw;
